branches/wip/Archive/f7215396599af7ea91d0fadc8617b343-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:6:13: error: ISO C++ forbids declaration of ‘PsFEInput’ with no type [-fpermissive]
   PsFEInput();
             ^
main.cpp:7:13: error: expected class-name before ‘(’ token
   ~PsFEInput();
             ^
main.cpp:10:18: error: definition of implicitly-declared ‘MyClass::MyClass()’
 MyClass::MyClass() : a(123.0)
                  ^
main.cpp:15:19: error: definition of implicitly-declared ‘MyClass::~MyClass()’
 MyClass::~MyClass() {}
                   ^
